--- a/demo/demo.html
+++ b/demo/demo.html
@@ -56,7 +56,7 @@ jf_NavLoadingBarCfgProvider.setConfigs({
       </div>
 
       <div class="row">
-        <a href class="btn btn-primary btn-lg" ng-click="fetch()" style="text-transform: lowercase"> $http.get( {{ subreddit }} ) </a>
+        <button class="btn btn-primary btn-lg" ng-click="fetch()" style="text-transform: lowercase"> $http.get( {{ subreddit }} ) </button>
 
         <div ng-repeat="post in posts" class="panel panel-default">
           <div class="panel-body media">
