--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <html ng-app="demo" ng-cloak>
 <head>
   <meta charset="utf-8">
-  <title>Angular Contextual Loader demo</title>
+  <title>Angular Navbar Loader demo</title>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../bower_components/angular/angular.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://github.com/jforaker/angular-contextual-spinner">Angular Contextual Loader</a>
+          <a class="navbar-brand" href="https://github.com/jforaker/angular-contextual-spinner">Angular Navbar Loader</a>
         </div>
 
         <div class="collapse navbar-collapse">
@@ -38,7 +38,7 @@
 
     <div class="container">
       <div class="row">
-        <h2>Contextual navbar loader for AngularJS</h2>
+        <h2>Animated Navbar Loader for AngularJS</h2>
         <p>An attempt at recreating the Google iOS app's loading bar in Angular. Just add <code>jf-nav-bar-loader</code> to the parent navbar element, for ex:</p>
         <p><pre> &lt;nav class="navbar navbar-default navbar-fixed-top" jf-nav-bar-loader&gt; </pre></p>
         <p>
