--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,7 +45,7 @@
           You can set up custom configurations in your app config, or rely on defaults, or change it yourself.
         <pre>
 jf_NavLoadingBarCfgProvider.setConfigs({
-  delay: 1000,
+  hideDelay: 1000,
   baseColor: 'white',
   baseOpacity: 0.3
 })</pre></p>
